# chatapp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASING.md  SECURITY.md  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
docs/architecture/: README.md  decisions.md  gap-analysis.md  messaging-platform.md
scripts/: check-versions.mjs
src/: App.css  App.tsx  Chat.tsx  notifications.ts  preferences.test.ts  preferences.ts  session.test.ts  session.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  db_queries.rs  error.rs  lib.rs  main.rs  mdns.rs  migration.rs  secure.rs  sockets.rs
src/components/: ChatInterface.tsx  ChatPane.tsx  CreateChannelModal.tsx  InviteModal.tsx  LoginView.test.tsx  LoginView.tsx  MembersPanel.tsx  NewDmModal.tsx  RoomList.tsx  SearchModal.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.tsx  Workspace.tsx
src/constants/: index.d.ts
src/hooks/: useChatConnection.ts  useFocusTrap.ts  useMessageStore.ts  usePreferences.test.ts  usePreferences.ts  useTheme.ts
src/test/: setup.ts
