[package]
name = "nutler"
version = "0.2.2"
description = "Nutler — a peer-hosted LAN team chat for company networks"
authors = ["jayced1"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nutler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
snow = "0.9"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

