[package]
name = "nutler"
version = "0.4.0"
description = "Nutler — a peer-hosted LAN team chat for company networks"
authors = ["jayced1"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nutler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
# Encrypt the database at rest (SQLCipher). Forces sqlx's libsqlite3-sys to link a
# SQLCipher-enabled SQLite; the DB is keyed via `PRAGMA key`. Vendored OpenSSL so the build
# doesn't depend on a system crypto library.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
# OS keychain for the at-rest DB key (macOS Keychain / Windows Credential Manager / Linux
# Secret Service), with a 0600 key-file fallback where no keychain is available.
keyring = "2"
getrandom = "0.2"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
snow = "0.10"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

